[gd_scene load_steps=8 format=3 uid="uid://ckbc5nu0asr8v"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_nsyc0"]
[ext_resource type="PackedScene" uid="uid://jymrix732t4s" path="res://scenes/objects/ball.tscn" id="2_bodub"]
[ext_resource type="PackedScene" uid="uid://dxkrjbtdn14uu" path="res://scenes/objects/board.tscn" id="3_ms454"]
[ext_resource type="PackedScene" uid="uid://cg658sikrrp2c" path="res://scenes/objects/wall.tscn" id="4_gwypq"]
[ext_resource type="Theme" uid="uid://d0kk8b5baija1" path="res://Resources/themes/custom_theme.tres" id="5_eb8sr"]
[ext_resource type="Script" path="res://scripts/UI/level_label.gd" id="6_lv5wp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8edrn"]
size = Vector2(384, 18)

[node name="Game" type="Node2D"]
script = ExtResource("1_nsyc0")
level_number = 2

[node name="Background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="ColorRect" type="ColorRect" parent="Background"]
layout_mode = 0
offset_left = 96.0
offset_right = 480.0
offset_bottom = 400.0
color = Color(0.878431, 0.878431, 0.862745, 1)

[node name="ColorRect2" type="ColorRect" parent="Background"]
layout_mode = 0
offset_right = 96.0
offset_bottom = 400.0
color = Color(0.329158, 0.329158, 0.329158, 1)

[node name="Ball" parent="." instance=ExtResource("2_bodub")]
position = Vector2(288, 368)

[node name="Board" parent="." instance=ExtResource("3_ms454")]
position = Vector2(288, 384)

[node name="WallTop" parent="." instance=ExtResource("4_gwypq")]
position = Vector2(288, -3.35703e-05)
rotation = 1.5708

[node name="WallLeft" parent="." instance=ExtResource("4_gwypq")]
position = Vector2(96, 0)

[node name="WallRight" parent="." instance=ExtResource("4_gwypq")]
position = Vector2(480, 0)
rotation = -3.14159

[node name="BallSpawn" type="Marker2D" parent="."]
position = Vector2(288, 368)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 96.0
offset_bottom = 400.0

[node name="MarginContainer" type="MarginContainer" parent="UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="UI/MarginContainer/VBoxContainer" node_paths=PackedStringArray("game")]
layout_mode = 2
theme = ExtResource("5_eb8sr")
text = "Level X"
script = ExtResource("6_lv5wp")
game = NodePath("../../../..")

[node name="LifesLabel" type="Label" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_eb8sr")
text = "Lifes: X"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(96, 424)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(192, -1)
shape = SubResource("RectangleShape2D_8edrn")

[connection signal="life_lost" from="." to="UI/MarginContainer/VBoxContainer/LevelLabel" method="_on_game_life_lost"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
